fixed players not showing up in tabs, tab hover, button accessibility, next button location

--- a/src/components/GenericComponents/BackButton/styles/back-button.scss
+++ b/src/components/GenericComponents/BackButton/styles/back-button.scss
@@ -1,9 +1,12 @@
+button {
+  border: none;
+  background-color: transparent;
+}
+
 .back-button {
   position: absolute;
   top: 0;
   left: 0;
-  background-color: transparent;
-  visibility: hidden;
   z-index: 1;
 
   img {
@@ -16,8 +19,6 @@
 }
 .next-button {
   text-align: center;
-  background-color: transparent;
-  visibility: hidden;
   z-index: 2;
 
   img {
